# MOM_Crypto_Bot

./: ADJUSTME.env  README.md  docker-compose.yml  getting started.odt  monitoring-stack.service  pipeline.ipynb  pyproject.toml  requirements.txt
agent/: CryptoMOMBot.py  Data Set exploration.ipynb  Hurst class testing CORRECT.ipynb  Hurst class testing.ipynb  Hurst testing.ipynb  MLDL testing.ipynb  Mandelbrot Cauchy testing.ipynb  Mandelbrot analsysis testing.ipynb  Mandelbrot.py  agent testing.ipynb
agent/static/: dist_color.yml
crypto_risk_analytics/: README.md  getting started.odt  requirements.txt  test.ipynb
crypto_risk_analytics/setup/: ADJUST_ME.env  docker-compose.yml  secret info.txt  telegraf.conf
crypto_risk_analytics/src/: ADJUST_ME.env  main.py  scheduler.py  setup.env
crypto_risk_analytics/src/ai_agents/: mcp_agent.py
monitoring/: telegraf.conf
setup/: docker-compose.yml  monitoring-stack.service
src/Pipeline/: RAG_pipeline_run.py  telegram_bot.py
src/analysis/: Calculation_Hurst.ipynb  historic_hurst_run.py  pdf_fitting_run.py
src/data_fetch/: Calculation_Hurst.ipynb  HistoricalData_to_InfluxDB.ipynb  InfluxDB_backup_run.py  InfluxDB_historicaldata.py  InfluxDB_import_backup.py  InfluxDB_import_from_backup.ipynb  InfluxDB_update.ipynb  InfluxDB_update_run.py  InfluxDB_update_run.sh
src/mom/: Mandelbrot.py  analysis_utils.py  influxDB_utils.py  news_utils.py  pipeline_agent.py  pipeline_langchain.py  pipeline_langgraph.py  pipeline_utils.py  toolbox.py
src/mom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+25 files in other folders)
